--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-3">
+  <div class="col-md-3">
     <div routerLink="/static-crud" class="card">
       <div class="card-body">
         <h2 class="ak-title">Static CRUD</h2>
@@ -7,7 +7,7 @@
       </div>
     </div>
   </div>
-  <div class="col-3">
+  <div class="col-md-3">
     <div routerLink="/dynamic-crud" class="card">
       <div class="card-body">
         <h2 class="ak-title">Dynamic CRUD</h2>
