--- a/src/app/static-crud/static-crud.component.html
+++ b/src/app/static-crud/static-crud.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12">
+  <div class="col-md-12">
     <ul class="list-inline">
       <li class="list-inline-item">
         <button type="button" routerLink="/" class="sm-btn">Back</button>
@@ -11,14 +11,14 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-6">
+  <div class="col-md-6">
     <div class="card">
       <div class="card-body">
         <h4 class="ak-sub-title">Form</h4>
         <form [formGroup]="regForm" (ngSubmit)="onSubmit(regForm.value)">
           <div class="form-group row">
-            <label class="col-3">Name</label>
-            <div class="col-5">
+            <label class="col-md-3">Name</label>
+            <div class="col-md-5">
               <input [ngClass]="{'is-invalid': submitted && fc.name.errors}" type="text" class="form-control" formControlName="name">
               <div *ngIf="submitted && fc.name.errors">
                 <span *ngIf="submitted && fc.name.errors?.required" class="error">This field is required.</span>
@@ -26,8 +26,8 @@
             </div>
           </div>
           <div class="form-group row">
-            <label class="col-3">Email Id</label>
-            <div class="col-5">
+            <label class="col-md-3">Email Id</label>
+            <div class="col-md-5">
               <input [ngClass]="{'is-invalid': submitted && fc.email.errors}" type="text" class="form-control" formControlName="email">
               <div *ngIf="submitted && fc.email.errors">
                 <span *ngIf="submitted && fc.email.errors?.required" class="error">This field is required.</span>
@@ -36,8 +36,8 @@
             </div>
           </div>
           <div class="form-group row">
-            <label class="col-3">Mobile No.</label>
-            <div class="col-5">
+            <label class="col-md-3">Mobile No.</label>
+            <div class="col-md-5">
               <input type="text" [ngClass]="{'is-invalid': submitted && fc.email.errors}" class="form-control" maxlength="10" formControlName="mobile">
               <div *ngIf="submitted && fc.mobile.errors">
                 <span *ngIf="submitted && fc.mobile.errors?.required" class="error">This field is required.</span>
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-12">
+            <div class="col-md-12">
               <ul class="list-inline">
                 <li class="list-inline-item">
                   <button *ngIf="!edit_flag" type="submit" class="primary-btn">Submit</button>
@@ -61,7 +61,7 @@
       </div>
     </div>
   </div>
-  <div class="col-6">
+  <div class="col-md-6">
     <div class="card">
       <div class="card-body">
         <h4 class="ak-sub-title">Table</h4>
