Add CRUD with backend

--- a/src/app/dynamic-crud/dynamic-crud.component.html
+++ b/src/app/dynamic-crud/dynamic-crud.component.html
@@ -82,10 +82,10 @@
                 <td>
                   <ul class="list-inline">
                     <li class="list-inline-item">
-                      <a (click)="onEdit(i)">Edit</a>
+                      <a (click)="onEdit(i,item)">Edit</a>
                     </li>
                     <li class="list-inline-item">
-                      <a (click)="onDelete(i)" class="trash">Delete</a>
+                      <a (click)="onDelete(i,item)" class="trash">Delete</a>
                     </li>
                   </ul>
                 </td>
