fixed minor changes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,5 @@
 @import './app/scss/buttons';
 @import './app/scss/common';
 @import './app/scss/util';
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
