add back to parent functionalty and other minor changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,4 +15,12 @@
       </div>
     </div>
   </div>
+  <div class="col-md-3">
+    <div routerLink="/book-room-crud" class="card">
+      <div class="card-body">
+        <h2 class="ak-title">Book Room CRUD</h2>
+        <h3 class="ak-sub-title">Book a room and get values from APIs</h3>
+      </div>
+    </div>
+  </div>
 </div>
