--- a/src/app/static-crud/static-crud.component.html
+++ b/src/app/static-crud/static-crud.component.html
@@ -1,15 +1,4 @@
-<div class="row">
-  <div class="col-md-12">
-    <ul class="list-inline">
-      <li class="list-inline-item">
-        <button type="button" routerLink="/" class="sm-btn">Back</button>
-      </li>
-      <li class="list-inline-item">
-        <h3 class="ak-title">Static CRUD</h3>
-      </li>
-    </ul>
-  </div>
-</div>
+<app-back-to-parent [pageTitle]="pageTitle"></app-back-to-parent>
 <div class="row">
   <div class="col-md-6">
     <div class="card">
