--- a/src/app/shared/contact/contact.component.html
+++ b/src/app/shared/contact/contact.component.html
@@ -1,4 +1,5 @@
 <div class="space-20"></div>
+<button type="button" class="primary-btn" routerLink="/">Home</button>
 <h2 class="ak-sub-title">For more info, contact us</h2>
 <table class="ak-para">
   <tr class="row">
